--- a/CSCI544.html
+++ b/CSCI544.html
@@ -7,7 +7,7 @@
 </head>
 <BODY>
 
-<div id="sidebar">
+<div id="sidebar" style="width:160px;">
 <div id="sidebarnav">
 <a href="index.html">Home</a>
 <a href="research.html">Research</a>
@@ -26,7 +26,7 @@
 <li><a href="CSCI544/cs544-fall2016">Fall 2016</a></li>
 <li><a href="CSCI544/cs544-fall2015">Fall 2015</a></li>
 </ul>
-<li>ITP 115: Programming in Python: Spring 2018</li>
+<li>ITP 115: Programming in Python (Spring 2018)</li>
 </ul>
 </div>
 
