--- a/index-new.html
+++ b/index-new.html
@@ -7,7 +7,7 @@
 </head>
 <BODY>
 
-<div id="sidebar">
+<div id="sidebar" style="width:160px;">
 <div id="sidebarnav">
 <a class="active" href="index.html">Home</a>
 <a href="research.html">Research</a>
