--- a/papers2.html
+++ b/papers2.html
@@ -7,7 +7,7 @@
 </head>
 <BODY>
 
-<div id="sidebar">
+<div id="sidebar" style="width:160px;">
 <div id="sidebarnav">
 <a href="index.html">Home</a>
 <a href="research.html">Research</a>
@@ -684,8 +684,8 @@ reliability calculation. Keywords: dialogue act annotation.
 <li>
 <p>
 Mark G. Core &amp; Lenhart K. Schubert. (1997).
-Handling Speech Repairs and Other Disruptions Through Parser
-  Metarules (<a href="http://www.aaai.org/Library/Symposia/Spring/1997/ss97-04-005.php">find in the AAAI library</a>).
+<a href="http://www.aaai.org/Library/Symposia/Spring/1997/ss97-04-005.php">
+Handling Speech Repairs and Other Disruptions Through Parser Metarules</a>.
 In Proceedings of the 
 AAAI Spring Symposium on Computational Models for Mixed
 Initiative Interaction (AAAI technical report SS-97-04), 23-29. Keywords: natural language understanding,
@@ -708,8 +708,9 @@ Computer Science, University of Rochester, Rochester NY 14627-0226. Keywords: na
 <li>
 <p>
 Mark Core. (1996).
-<u>Using Parsed Corpora for Structural Disambiguation in the
-TRAINS Domain.</u> Poster/student paper in Proceedings of 
+<a href="https://aclanthology.org/P96-1046.pdf">
+Using Parsed Corpora for Structural Disambiguation in the
+TRAINS Domain</a>. Poster/student paper in Proceedings of 
 the 34th Annual Meeting of the Association for Computational 
 Linguistics (ACL), 345-347. Keywords: natural language understanding, planning dialogues.
 </p>
