--- a/research.html
+++ b/research.html
@@ -7,7 +7,7 @@
 </head>
 <BODY>
 
-<div id="sidebar">
+<div id="sidebar" style="width:160px;">
 <div id="sidebarnav">
 <a href="index.html">Home</a>
 <a class="active" href="research.html">Research</a>
@@ -21,7 +21,7 @@
 
 <h2>Ph.D. thesis on dialog parsing</h2>
 <p>
-As a Ph.D. student at the University of Rochester, I focused on dialog parsing, natural language understanding in the context of spoken dialogue. I extended traditional syntactic analysis to encompass overlapping speech and speech repairs, disruptions to spoken utterances such as self-corrections and filled pauses (e.g., um, uh). Another aspect of dialogue parsing is recognition of the intended actions (i.e., dialogue acts) associated with an utterance. I worked with the Discourse Resource Initiative in an effort to unify dialogue annotation schemes from different groups to facilitate collaborative efforts to build large, annotated corpora. James Allen and I wrote up the final annotation scheme, DAMSL (Dialog Act Markup in Several Layers), which has been used as a starting point for a number of dialogue annotation efforts. Although not the focus of my thesis, I also explored using dialogue act co-occurences as a tool for discourse analysis of the problem-solving dialogues in my test corpus.  
+As a Ph.D. student at the University of Rochester, I focused on dialog parsing, natural language understanding in the context of spoken dialogue. I extended traditional syntactic analysis to encompass overlapping speech and speech repairs, disruptions to spoken utterances such as self-corrections and filled pauses (e.g., um, uh). Another aspect of dialog parsing is recognition of the intended actions (i.e., dialogue acts) associated with an utterance. I worked with the Discourse Resource Initiative in an effort to unify dialogue annotation schemes from different groups to facilitate collaborative efforts to build large, annotated corpora. James Allen and I wrote up the final annotation scheme, DAMSL (Dialog Act Markup in Several Layers), which has been used as a starting point for a number of dialogue annotation efforts. Although not the focus of my thesis, I also explored using dialogue act co-occurences as a tool for discourse analysis of the problem-solving dialogues in my test corpus.  
 </p>
 
 <h2>Tutorial dialogue systems</h2>
@@ -42,24 +42,25 @@ As a research scientist at USC's Institute for Creative Technologies, one of my 
 
 <h2>Lifelong learning and promoting learner engagement</h2>
 
-<ul>
-<li>Learning analytics.</li>
-<li>Immersive technologies (e.g., mixed-reality, 3D animated characters, VR headset-based interfaces).</li>
-<li>Multi-modal analysis of learners (e.g., recognition of facial affect).</li>
-<li>Learning analytics.</li> 
-<li>Automated classification of engagement (e.g., through semi-supervised learning).</li>
-<li>Leveraging large language models to generate learning resources (e.g., questions, multiple-choice options, feedback).</li>
-</ul>
+<p>
+A key aspect of lifelong learning is tracking learner engagement to support tutoring strategies
+that not only encourage cognitive growth but also promote positive attitudes toward the subject material
+and learning in general. I have explored a number of related research areas including learning analytics,
+multi-modal analysis of learners (e.g., recognition of facial affect), and automated classification of
+engagement (e.g., through semi-supervised learning). Another challenge in lifelong learning is the authoring
+bottleneck. Although large-language-model-based chat bots have the potential to provide interactive learning activities on demand, it is crucial to ensure that such activities actually promote learning. 
+</p>
 
 <h2>Notable fielded systems</h2>
 <ul>
 <li><b>BiLAT</b> (partner: U.S. Army's Games for Training program) is a training system that allows learners to participate in menu-based bilateral negotiation role-plays set in the context of common Iraqi cultures.</li>
 <li><b>Standard Patient Studio</b> (partner: USC Keck School of Medicine) is a training system that allows medical students to practice taking a medical history through open-response role-plays. It also includes an authoring tool allowing doctors to create new scenarios for their students. <a href="standardpatient.net">Try it out</a>.</li>
-<li><b>INOTS</b> (partner: U.S. Navy, <a href="https://ict.usc.edu/research/projects/inots-counseling/">read more</a>) and <b>ELITE</b> (partner: U.S. Army, <a href="https://ict.usc.edu/research/projects/elite-emergent-leader-immersive-training-environment/">read more</a>), allowed officiers-in-training to practice addressing the personal and performance problems of virtual subordinates in menu-based role-plays.</li> 
-<li><b>MILES</b> (partner: USC's Center for Innovation and Research on Veterans and Military Families) and <b>MIND</b> (partner: VA Puget Sound and University of Washington) allowed students to practice their motivational interviewing skills with a virtual veteran in menu-based role-plays.</li>
-<li><b>DIVIS</b> (partner: U.S Army's SHARP Academy) is the Digital Interactive Victim Intake System. Starting with ELITE scenarios addressing different aspects of U.S. Army's SHARP (Sexual Harassment/Assault Response and Prevention) Program, we began a long-term collaboration with the Army's SHARP Academy leading to DIVIS which supports open-response virtual roleplaying.</li> 
-<li><b>OpenTutor</b> is an open-source dialogue-based tutoring system initially developed with funding from the U.S. Army and now used in a variety of projects.<a href="https://opentutor.info/home/">Try it out.</a></li>
-<li><b>PAL3</b>, the Personal Assistant for Life Long Learning, is a learning companion accessible through a mobile phone app or web browser which was initially developed with funding from the Office of Naval Research and now used in a variety of projects. To meet learner goals, PAL3 recommends lessons from a growing library of readings, videos and interactive resources in subjects such as electronics, leadership, suicide prevention and artificial intelligence.<a href="https://ict.usc.edu/research/projects/personal-assistant-for-life-long-learning-pal3/">Read more.</a></li>
+<li><b>INOTS</b> (partner: U.S. Navy, <a href="https://ict.usc.edu/research/projects/inots-counseling/">read more</a>) and <b>ELITE</b> (partner: U.S. Army, <a href="https://ict.usc.edu/research/projects/elite-emergent-leader-immersive-training-environment/">read more</a>), allows officiers-in-training to practice addressing the personal and performance problems of virtual subordinates in menu-based role-plays.</li> 
+<li><b>MILES</b> (partner: USC's Center for Innovation and Research on Veterans and Military Families) and <b>MIND</b> (partner: VA Puget Sound and University of Washington) allows students to practice their motivational interviewing skills with a virtual veteran in menu-based role-plays.</li>
+<li><b>DIVIS</b> (partner: U.S Army's SHARP Academy) is the Digital Interactive Victim Intake Simulator. Starting with ELITE scenarios addressing different aspects of U.S. Army's SHARP (Sexual Harassment/Assault Response and Prevention) Program, we began a long-term collaboration with the Army's SHARP Academy leading to DIVIS which supports open-response virtual roleplaying.</li> 
+<li><b>OpenTutor</b> is an open-source dialogue-based tutoring system. It allows teachers to create
+	lessons without any knowledge of programming or AI. <a href="https://opentutor.info/home/">Try it out</a>.</li>
+<li><b>PAL3</b>, the Personal Assistant for Life Long Learning, is a learning companion accessible through a mobile phone app or web browser. To meet learner goals, PAL3 recommends lessons from a growing library of readings, videos and interactive resources in subjects such as electronics, leadership, suicide prevention and artificial intelligence. <a href="https://ict.usc.edu/research/projects/personal-assistant-for-life-long-learning-pal3/">Read more</a>.</li>
 </ul>
 <p>
 Copyright Mark G. Core. All rights reserved.
