fix broken link

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 <div id="sidebarnav">
 <a class="active" href="index.html">Home</a>
 <a href="research.html">Research</a>
-<a href="publications2.html">Publications</a>
+<a href="papers2.html">Publications</a>
 <a href="CSCI544.html">USC Teaching</a>
 </div>
 </div>
